# share_music

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: build.yml
api/: serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_room_code.py  0003_room_current_song.py
frontend/: package-lock.json  package.json  urls.py  views.py
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  routes.tsx  styles.ts
frontend/src/Pages/CreateRoomPage/: index.tsx  styles.ts
frontend/src/Pages/HomePage/: index.tsx  styles.ts
frontend/src/Pages/RoomJoinPage/: index.tsx  styles.ts
frontend/src/components/Info/: index.tsx  styles.ts
frontend/src/components/MusicPlayer/: index.tsx  styles.ts
frontend/src/components/Room/: index.tsx  styles.ts
share_music/: asgi.py  settings.py  urls.py  wsgi.py
spotify/: credentials.py  util.py  views.py
spotify/migrations/: 0001_initial.py  0002_vote.py
