[tool.poetry]
name = "share-music"
version = "0.1.0"
description = ""
authors = ["Marcos Mantovani <marcospiderplays@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-rest-framework = "^0.1.0"
psycopg2 = "^2.9.9"
pip = "^24.0"
gitpython = "^3.1.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
